--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,8 @@
 [phases.setup]
-nixPkgs = ["...", "ffmpeg"]
+nixPkgs = ["python311", "ffmpeg", "gcc"]
 
 [phases.build]
-cmds = ["...", "pip install -r requirements.txt"]
+cmds = ["python -m venv .venv", ".venv/bin/pip install -r requirements.txt"]
+
+[start]
+cmd = "python main.py"
