--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python310", "ffmpeg", "gcc"]
+nixPkgs = ["python310", "ffmpeg", "gcc", "stdenv"]
 
 [phases.install]
-cmds = ["python3 -m venv /app/.venv", "/app/.venv/bin/pip install -r requirements.txt"]
+cmds = ["python3 -m venv /app/.venv", "/app/.venv/bin/pip install --upgrade pip", "/app/.venv/bin/pip install -r requirements.txt"]
 
 [start]
 cmd = "/app/.venv/bin/python3 main.py"
